# maze-rs

./: .gitignore  Cargo.toml  maze
src/: lib.rs  main.rs
src/alg/: bta.rs  mod.rs  sidewinder.rs
src/disp/: ascii.rs  display.rs
src/solvers/: dijkstra.rs
src/types/: cell.rs  chunk.rs  grid.rs
tests/: grid-test.rs  maze.rs
