[package]
name = "maze"
version = "0.1.0"
authors = ["Charles Ede <charlieede01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "maze"
path = "src/lib.rs"

[[bin]]
name = "maze-gen"
path = "src/main.rs"

[dependencies]
prettytable-rs = "^0.8"
piston_window = "0.98.0"
clap = { git = "https://github.com/clap-rs/clap/" }